# bytegenie_final_assignment

./: .env  README.md  pyproject.toml
src/problem_1/: __init__.py
src/problem_1/approach_1/: filter.py  main.py
src/problem_1/approach_2/: filter_engine.py  graph.py  graph_filter.py  main.py  visualize.py
src/problem_1/data/: main.py
src/problem_1/solution/: filter.py  main.py
src/problem_2/: __init__.py  main.py  query.py
src/problem_2/data/: data.sql
